WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306414
[GTK] Wrong prepared statement creation check in IconDatabase::pruneTimerFired()
https://bugs.webkit.org/show_bug.cgi?id=306414
Summary
[GTK] Wrong prepared statement creation check in IconDatabase::pruneTimerFired()
Adrian Perez
Reported
2026-01-28 00:58:16 PST
In IconDatabase::pruneTimerFired() a prepared statement is created if needed; but the condition checking whether the operation succeeded is wrong: if (!m_pruneIconsStatement) { m_pruneIconsStatement = m_db->prepareStatement("DELETE FROM IconInfo WHERE stamp <= (?);"_s); if (m_pruneIconsStatement) { // <----- This is wrong, the error when printed when the prepared statement is valid LOG_ERROR("Preparing statement pruneIcons failed"); return; }
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2026-01-28 01:01:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57397
EWS
Comment 2
2026-01-29 14:36:39 PST
Committed
306448@main
(ca5b100c43e9): <
https://commits.webkit.org/306448@main
> Reviewed commits have been landed. Closing PR #57397 and removing active labels.
Adrian Perez
Comment 3
2026-01-29 14:43:22 PST
This was actually a regression of
300932@main
(
bug #300007
)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug