Cherry-pick 306448@main (ca5b100c43e9). https://bugs.webkit.org/show_bug.cgi?id=306414

[GTK] Wrong prepared statement creation check in IconDatabase::pruneTimerFired()
    https://bugs.webkit.org/show_bug.cgi?id=306414

    Reviewed by Carlos Garcia Campos.

    * Source/WebKit/UIProcess/API/glib/IconDatabase.cpp:
    (WebKit::IconDatabase::pruneTimerFired): Flip the check after prepared
    statement creation to enter the error handling code when an error has
    actually happened, instead of on success.

    Canonical link: https://commits.webkit.org/306448@main

Canonical link: https://commits.webkit.org/305877.33@webkitglib/2.52